MERLINdir=$(libisisdir)/applications/matlab/MERLIN
MERLINfiles= setup_merlin_data_source.m setup_merlin_homer_defaults.m setup_merlin_mono_sample.m setup_merlin_white_beam.m setup_merlin_diag_defaults.m setup_merlin_inst.m setup_merlin_mono_van.m
MERLIN_DATA=$(MERLINfiles)
EXTRA_DIST=$(MERLINfiles)
