homerdir=$(libisisdir)/applications/matlab/homer
homerfiles=monitor_mono_van.m homer_getei.m homer.m make_path_from_par.m map_prep.m mask_prep.m diagnose.m van_incoh.m mono_van.m save_spe_lib.m mono_sample.m white_beam.m default_homer_nchunk.m getdefaults.m runfile2spe.m
homer_DATA=$(homerfiles)
EXTRA_DIST=$(homerfiles)
