homerguidir=$(libisisdir)/applications/matlab/homer_gui
homerguifiles=check_handles.m  do_diag2.m do_homer.m Homer_ver0.m  Homer_ver0.fig parse_homer.m setup_DSO_bank.m do_absolute.m do_white.m inst_defs.m pre_parse.m get_GUI_input.m progbar.m
homergui_DATA=$(homerguifiles)
EXTRA_DIST=$(homerguifiles)
